FindBugs comments fixed